--- a/DotNet/POC/Framework_SimpleAuth/POC_Authentication/Web.config
+++ b/DotNet/POC/Framework_SimpleAuth/POC_Authentication/Web.config
@@ -10,10 +10,10 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" 
-         connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-POC_Authentication-20190919031027.mdf;Initial Catalog=aspnet-POC_Authentication-20190919031027;Integrated Security=True" 
+         connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\POC_Authentication.mdf;Initial Catalog=aspnet-POC_Authentication-20190919031027;Integrated Security=True" 
          providerName="System.Data.SqlClient" />
     <add name="CodeFirstConnection" 
-         connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-POC_Authentication-20190919031027;Integrated Security=True" 
+         connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=aspnet-POC_Authentication-20190919031027;uid=BETSSON\adna01; password=3ed4rf%TG;Integrated Security=True" 
          providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
