--- a/Typescript/ndm-ts-poc/package.json
+++ b/Typescript/ndm-ts-poc/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js"
+	"build": "webpack --config webpack.config.js",
+	"start": "webpack --config webpack.config.js --watch"
   },
   "author": "",
   "license": "ISC",
