--- a/DotNet/POC/Framework_MultiDb/Framework_MultiDb/App.config
+++ b/DotNet/POC/Framework_MultiDb/Framework_MultiDb/App.config
@@ -6,8 +6,10 @@
     </configSections>
 
     <connectionStrings>
-      <add name="MyContext" providerName="MySql.Data.MySqlClient"
-           connectionString="server=localhost;port=3306;database=mycontext;uid=root;password=********"/>
+      <add name="MySql" providerName="MySql.Data.MySqlClient"
+           connectionString="server=localhost;port=3306;database=multydb;uid=root;"/>
+      <add name="SqlServer" providerName="System.Data.SqlClient"
+           connectionString="Data Source=.;Initial Catalog=multydb;Integrated Security=true"/>
     </connectionStrings>
 
     <startup> 
