deleting php api v3 and multidb

--- a/DotNet/POC/Framework_MultiDb/Framework_MultiDb/App.config
+++ b/DotNet/POC/Framework_MultiDb/Framework_MultiDb/App.config
@@ -6,8 +6,10 @@
     </configSections>
 
     <connectionStrings>
-      <add name="MyContext" providerName="MySql.Data.MySqlClient"
-           connectionString="server=localhost;port=3306;database=mycontext;uid=root;password=********"/>
+      <add name="MySql" providerName="MySql.Data.MySqlClient"
+           connectionString="server=localhost;port=3306;database=multi-db;uid=root;password=********"/>
+      <add name="SqlServer" 
+           connectionString="Server=(localdb)\\mssqllocaldb;Database=multi-db;Trusted_Connection=True;MultipleActiveResultSets=true"/>
     </connectionStrings>
 
     <startup> 
