--- a/DotNet/POC/POC-DotNET-6/POC-DotNET-6/appsettings.json
+++ b/DotNet/POC/POC-DotNET-6/POC-DotNET-6/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=EPHUBUDW002F;Database=Parky;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
