--- a/DotNet/POC/MongoDbPoc/appsettings.json
+++ b/DotNet/POC/MongoDbPoc/appsettings.json
@@ -12,6 +12,7 @@
     }
   },
   "ConnectionStrings": {
-    "mongo": ""
+    "mongo": "mongodb://localhost:27017/?readPreference=primary&directConnection=true&ssl=false",
+    "mongoDbName": "People"
   }
 }
